--- a/cortazar_scraping.ipynb
+++ b/cortazar_scraping.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to get the URL's of the stories\n",
+    "# Function to get each story's URL\n",
     "\n",
     "def get_links(url):\n",
     "    html = urlopen(url)\n",
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Saving the result of the function in variable \"links\"\n",
+    "# Saving the result of the function in variable \"links\"\n",
+    "\n",
     "links = get_links(\"http://ciudadseva.com/autor/julio-cortazar/cuentos/\")\n"
    ]
   },
@@ -47,11 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to extract the title and text of each story. Creates a dictionary.\n",
+    "\n",
     "def get_story(story_url):\n",
     "    html = urlopen(story_url)\n",
     "    bs = BeautifulSoup(html, \"html.parser\")\n",
     "    title = bs.find(\"h1\").get_text()\n",
     "    text = []\n",
+    "    \n",
     "    container = bs.find(\"article\").find(\"div\", {\"class\" : \"text-justify\"})\n",
     "    \n",
     "    for i in container.find_all(\"p\", {\"style\": False}):\n",
@@ -82,6 +86,8 @@
     }
    ],
    "source": [
+    "# Creating a list with dictionaries, where each dictionary is a story. \n",
+    "\n",
     "stories = []\n",
     "\n",
     "for link in links:\n",
@@ -124,6 +130,8 @@
     }
    ],
    "source": [
+    "# Creating data fram\n",
+    "\n",
     "df_cortazar = pd.DataFrame(stories)\n",
     "df_cortazar"
    ]
